@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepository <<interface>>

title Class Diagram /  As marketing director, I want to change a plan’s details other than pricing

class Plans{
    -name
    - description
    - numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
     -musicSuggestion
     -annualFee
     -monthlyFee
     -active
     -promoted
     +updateData(long desiredVersion, String description,double maximumNumberOfUsers,String numberOfMinutes ,double musicCollections,String musicSuggestions)
}
class PlansMapperInverse{
    +toPlansView(PlanRequest plans)
}
class PlansController{
    +partialUpdate(final WebRequest request,final String name,final EditPlansRequest resource):ResponseEntity<PlansView>
    }
class PlansService{
 +partialUpdate(String name, EditPlansRequest resource, long parseLong):Plans
}


class PlansViewMapper{
    +toPlansView(Plans plans):PlansView
}
interface PlansRepository
{
+findByName_Name(String name): Optional<Plans>
+ getPlansFromOtherAPI(String name)
+ doPlansPatchAPI(name,desiredVersion,json)
+save(S entity) : <S extends Plans>
}


PlansController ..> PlansService: uses >
PlansService ..> PlansRepository: uses >
PlansService ..> PlansRepositoryCustomImpl: uses >
PlansRepository ..> Plans: < record
PlansService ..> Plans: uses >
PlansRepository ..left>PlansController: HTPP API call >
PlansController ..> PlansMapperInverse: uses >
PlansController ..> PlansViewMapper: uses >

@enduml